--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -6,13 +6,35 @@
         <li>
             <a href="/dashboard"><i class="fas fa-home"></i>Dashboard</a>
         </li>
-        <li>
-            <a href="/companies"><i class="fas fa-home"></i>Company</a>
-        </li>
+        <% if(JSON.parse(user).role == "superAdmin"){ %>
+            <li>
+                <a href="/users"><i class="fas fa-users"></i>Users</a>
+            </li>
+        <% } %>
+        <% if(JSON.parse(user).role == "superAdmin"){ %>
+            <li>
+                <a href="/companies"><i class="fas fa-building"></i>Company</a>
+            </li>
+        <% } %>
+        <% if(JSON.parse(user).role == "superAdmin"){ %>
+            <li>
+                <a href="/roles"><i class="fas fa-tasks"></i>Roles</a>
+            </li>
+        <% } %>
+        <% if(JSON.parse(user).role == "superAdmin"){ %>
+            <li>
+                <a href="/documents"><i class="fas fa-file"></i>Documents</a>
+            </li>
+        <% } %>
+        <% if(JSON.parse(user).role == "superAdmin"){ %>
+            <li>
+                <a href="/categories"><i class="fas fa-list-alt"></i>Categories</a>
+            </li>
+        <% } %>
     </ul>
 </nav>
 <script>
-        let token = '<%=name%>';
-        // let token= document.cookie
-        console.log(token.name)
+        // let token = JSON.parse('');
+        // // let token= document.cookie
+        // console.log(token)
 </script>
