--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,7 +25,7 @@
             <li class="nav-item dropdown">
                 <div class="nav-dropdown">
                     <a href="#" id="nav2" class="nav-item nav-link dropdown-toggle text-secondary" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-user"></i> <span>John Doe</span> <i style="font-size: .8em;" class="fas fa-caret-down"></i>
+                        <i class="fas fa-user"></i> <span><% let name= JSON.parse(user).name%><%= name.charAt(0).toUpperCase() + name.slice(1);%></span> <i style="font-size: .8em;" class="fas fa-caret-down"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end nav-link-menu">
                         <ul class="nav-list">
