--- a/views/header.ejs
+++ b/views/header.ejs
@@ -33,7 +33,7 @@
                             <!-- <li><a href="" class="dropdown-item"><i class="fas fa-envelope"></i> Messages</a></li> -->
                             <!-- <li><a href="" class="dropdown-item"><i class="fas fa-cog"></i> Settings</a></li> -->
                             <div class="dropdown-divider"></div>
-                            <li><a href="" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                            <li><a href="" class="dropdown-item" onclick="clearSession()"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                         </ul>
                     </div>
                 </div>
