--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -1,32 +1,31 @@
 <nav id="sidebar">
     <div class="sidebar-header">
-        <img src="/img/bootstraper-logo.png" alt="bootraper logo" class="app-logo">
+        <img src="/img/dms.png" alt="bootraper logo" class="app-logo">
     </div>
+    <% let role= JSON.parse(user).role %>
     <ul class="list-unstyled components text-secondary">
         <li>
             <a href="/dashboard"><i class="fas fa-home"></i>Dashboard</a>
         </li>
-        <% if(JSON.parse(user).role == "superAdmin"){ %>
+        <% if(role == "superAdmin" || role == "admin"){ %>
             <li>
                 <a href="/users"><i class="fas fa-users"></i>Users</a>
             </li>
         <% } %>
-        <% if(JSON.parse(user).role == "superAdmin"){ %>
+        <% if(role == "superAdmin"){ %>
             <li>
                 <a href="/companies"><i class="fas fa-building"></i>Company</a>
             </li>
         <% } %>
-        <% if(JSON.parse(user).role == "superAdmin"){ %>
+        <% if(role == "superAdmin" || role == "admin"){ %>
             <li>
                 <a href="/roles"><i class="fas fa-tasks"></i>Roles</a>
             </li>
         <% } %>
-        <% if(JSON.parse(user).role == "superAdmin"){ %>
             <li>
                 <a href="/documents"><i class="fas fa-file"></i>Documents</a>
             </li>
-        <% } %>
-        <% if(JSON.parse(user).role == "superAdmin"){ %>
+        <% if(role == "superAdmin" || role == "admin"){ %>
             <li>
                 <a href="/categories"><i class="fas fa-list-alt"></i>Categories</a>
             </li>
